feat: add v4 board-aware piloting advice (role, hand values, opponent inference, targeting)
- Sidecar: RoleAssessment (Who's the Beatdown), HandValuation,
  OpponentHandGuess, TargetPriority models and logic in advice.py
- Sidecar: phase/available_mana fields on RecognitionRequest
- Sidecar: off-meta threshold raised 0.2->0.35, curated archetype
  preference hardened in prompt
- Forge AI: DeckRecognitionObserver sends full board state (hand,
  battlefield, graveyards, life totals, phase, mana)
- Forge AI: SidecarInfluence consumes v4 payloads; mulligan tiebreaker
  from hand values; target priority hints via SpellAbility SVar
- Dashboard: new panels for role, hand valuation, opponent hand, targets